--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Flattern - Flat and trendy bootstrap site template</title>
+  <title>IntegralTech - Burkina Faso</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="" />
   <meta name="author" content="" />
@@ -168,7 +168,7 @@
           <div class="span4">
             <div class="logo">
               <a href="index.html"><img src="img/logo.png" alt="" class="logo" /></a>
-              <h1>Flat and trendy bootstrap template</h1>
+              <h1>IntegralTech Burkina Faso</h1>
             </div>
           </div>
           <div class="span8">
